compose: Fix expanded compose un-collapsible in presence of navbar_alerts.
The distance of compose-box from the top is hardcoded in the existing
code as `50px`, which only considers the height of the `.header`, plus the
padding-bottom of the header. This results in a bug where the top bar of
compose-box gets hidden behind the header if navbar_alerts is also present
in the view.

This commit calculates the top distance of the compose-box dynamically,
whenever the compose-box is opened and set the `top` property of the
compose-box accordingly.

Tested on my Ubuntu development environment.

Fixes: #19249.

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -586,12 +586,10 @@ a.compose_control_button.hide {
 }
 
 #compose.compose-fullscreen {
-    height: 100%;
     z-index: 99;
 
     #compose-container {
-        margin-top: 50px;
-        height: calc(100% - 50px);
+        height: 100%;
     }
 
     .message_comp {
